<resources>
    <string name="app_name">Birds Explorer</string>

    // Nav menu
    <string name="nav_menu_action_gallery">Gallery</string>
    <string name="nav_menu_action_add_bird">Add bird</string>
    <string name="nav_menu_action_map">Map</string>
    <string name="nav_menu_action_profile">Profile</string>

    // Profile
    <string name="profile_not_logged_text">You are not logged in. Tell us, who you are!</string>
    <string name="profile_logged_welcome">Welcome back, &lt;b>%s&lt;/b></string>
    <string name="login">Log in</string>
    <string name="demo_login">(Demo) Log in</string>
    <string name="logout">Logout</string>
    <string name="your_birds">Your birds (top is most recently added)</string>
    <string name="your_birds_demo">All birds (top is most recently added)</string>
    <string name="no_birds">You did not add any bird yet! 🐣</string>

    // Bird page
    <string name="bird_page_edit">Edit</string>
    <string name="bird_page_remove">Remove</string>
    <string name="bird_page_seen_at_title">Seen at:</string>

    // Gallery
    <string name="gallery_card_bird_location">Location: %fº N, %fº E</string>

    // Add bird
    <string name="label_name">Bird name</string>
    <string name="label_click_to_add_bird">Click on the camera icon to add bird photo:</string>
    <string name="label_click_to_select_location">Click here to select location where bird was seen:</string>
    <string name="label_button_select_location">Open map</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_update">Update</string>
    <string name="label_button_clear">Clear</string>
    <string name="label_click_to_select_location_detail">Click will open a map in overlay dialog</string>
    <string name="add_bird_location_undefined">Location: undefined</string>
    <string name="add_bird_location_not_geo_encoded">Location: %fº N, %fº E</string>

    // Validation
    <string name="validation_generic_field_is_required">This field is required</string>
    <string name="validation_name_field_is_required">Please, enter a name for this bird</string>
    <string name="error_empty_coordinates">Please, specify location of the bird</string>
    <string name="error_empty_photo">Please, upload a photo or image of the bird</string>

    // Errors
    <string name="unknown_error">Unknown error</string>
    <string name="login_declined">If you want to be able to add info about birds, you should enter to your profile</string>
    <string name="edit_declined">Sorry, only non-demo users may add/edit birds 😿</string>
    <string name="remove_declined">Sorry, only non-demo users may remove birds 😿</string>

    // Notifications
    <string name="notification_bird_was_removed">The bird %s was successfully removed!</string>

    // Location picker
    <string name="pin_description">Pin, which helps to more precisely see selected location on map</string>

    <string name="bird_photo_description">A picture of %s</string>
</resources>