<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_gallery"
        android:enabled="true"
        android:icon="@drawable/ic_action_gallery"
        android:title="@string/nav_menu_action_gallery" />

    <item
        android:id="@+id/action_add_bird"
        android:enabled="true"
        android:icon="@drawable/ic_action_add_bird"
        android:title="@string/nav_menu_action_add_bird" />

    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_action_map"
        android:title="@string/nav_menu_action_map" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/nav_menu_action_profile" />
</menu>